Add further reading list to the Iterator notebook

--- a/generator.ipynb
+++ b/generator.ipynb
@@ -889,6 +889,15 @@
         "except StopIteration as e:\n",
         "    print(f\"Result is {e.value}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Further reading\n",
+        "- [Itertools](https://docs.python.org/3/library/itertools.html) from the standard library is great, the reference implementations are very good examples of iterators.\n",
+        "- [AsyncIO](https://realpython.com/async-io-python/) as implemented in the Python standard library.\n"
+      ]
     }
   ],
   "metadata": {
